--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,3 +1,3 @@
 TEAM_ID=
-BUNDLE_ID=com.akexorcist.kotlin.multiplatform.sunandmoon.sun-and-moon-switch
-APP_NAME=sun-and-moon-switch
+BUNDLE_ID=com.akexorcist.kotlin.multiplatform.sunandmoon.day-and-night-switch
+APP_NAME=day-and-night
